--- a/public/screen.html
+++ b/public/screen.html
@@ -10,7 +10,7 @@
     </style>
   </head>
   <body>
-    <video id="watchScreen" width="100%" height="100%" playsinline autoplay mute></video>
+    <video id="watchScreen" width="100%" height="100%" playsinline autoplay muted></video>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/watch.js"></script>
   </body>
